--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -21,7 +21,7 @@
     required></ion-input>
     </ion-item>
 
-    <ion-button expand="block" shape="round">Login</ion-button>
+    <ion-button expand="block" shape="round" onclick="true" routerLink="/tabs">Login</ion-button>
   </form>
 
   <div id="form">
