Actualizacion del proyecto

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,6 @@
     <ion-buttons slot="end">
     <ion-back-button defaultHref="/tabs/tab1" text="Regresar" icon="arrow-undo-circle-sharp"> </ion-back-button>
     </ion-buttons>
-    <ion-title>{{titulo}}</ion-title>
+    <ion-title style="text-align: center;">{{titulo}}</ion-title>
   </ion-toolbar>
 </ion-header>
