--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Inicio</ion-title>
+    <ion-title style="text-align: center;">Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
