--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <ion-header translucent>
   <ion-toolbar color="primary">
     <ion-buttons slot="end">
-    <ion-back-button defaultHref="/tabs/tab1" text="Regresar" icon="arrow-undo-circle-sharp"> </ion-back-button>
+    <ion-back-button defaultHref="/tabs/inicio" text="Regresar" icon="arrow-undo-circle-sharp"> </ion-back-button>
     </ion-buttons>
-    <ion-title style="text-align: center;">{{titulo}}</ion-title>
+    <ion-title>{{titulo}}</ion-title>
   </ion-toolbar>
 </ion-header>
