--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title style="text-align: center;">Inicio</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Receta"></app-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
