--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,10 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Presión Arterial"></app-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
