--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -1,10 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Oxigenación Sanguinea"></app-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
