--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,19 +1,24 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="documents-sharp"></ion-icon>
+      <ion-label>Recetas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="fitness-sharp"></ion-icon>
+      <ion-label>Presión</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="heart-half-sharp"></ion-icon>
+      <ion-label>Oxigenación</ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="dieta">
+      <ion-icon name="newspaper-sharp"></ion-icon>
+      <ion-label>Dieta</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
