Actualizacion del proyecto

--- a/src/app/components/datos-domicilio/datos-domicilio.component.html
+++ b/src/app/components/datos-domicilio/datos-domicilio.component.html
@@ -1,3 +1,4 @@
+<ion-content>
 <div id="card">
   <ion-grid id="form">
       <ion-row class="align-center">
@@ -53,3 +54,4 @@
       </ion-row>
   </ion-grid>
 </div>
+</ion-content>
