--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -8,10 +8,10 @@
     <ion-grid>
       <ion-row>
     <ion-col style="align-items: center">
-      <ion-button *ngIf="!dato">Editar perfil</ion-button>
-      <ion-button *ngIf="dato">Editar domicilio</ion-button>
-      <ion-button *ngIf="!dato" (click)="ChangeDomicilie()">Domicilio</ion-button>
-      <ion-button *ngIf="dato" (click)="ChangePerfil()">Mi perfil</ion-button>
+      <ion-button shape="round" *ngIf="!dato" (click)="EditPerfil()">Editar perfil</ion-button>
+      <ion-button shape="round" *ngIf="dato">Editar domicilio</ion-button>
+      <ion-button shape="round" *ngIf="!dato" (click)="ChangeDomicilie()">Domicilio</ion-button>
+      <ion-button shape="round" *ngIf="dato" (click)="ChangePerfil()">Mi perfil</ion-button>
     </ion-col>
     </ion-row>
     </ion-grid>
