--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,12 +1,54 @@
 <app-header titulo="Presión Arterial"></app-header>
 
+<ion-content class="ion-padding">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card color ="primary">
+    <ion-card-header>
+      <div class="fecha">
+        <ion-item>
+          <ion-label  position="floating">DD/MM/AA</ion-label>
+          <ion-datetime displayFormat="DD/MM/YYYY" min="1994-03-14" max="2012-12-09">
+          </ion-datetime>
+        </ion-item>
+      </div>
+      <ion-card-title></ion-card-title>
+    </ion-card-header>
+  
+    <ion-item color="primary" lines="none">
+      <ion-label>Presión-Mañana</ion-label>
+    </ion-item>
+    <ion-card>
+      <ion-item>
+      <ion-label position="floating"></ion-label>
+      <ion-input type="text"
+    placeholder="Ingrese la presión matutina"
+     required></ion-input>
+    </ion-item> 
+    </ion-card>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <ion-item color="primary" lines="none">
+      <ion-label>Presión-Noche:</ion-label>
+    </ion-item>
+    <ion-card>
+      <ion-item>
+      <ion-label position="floating"></ion-label>
+      <ion-input type="text"
+    placeholder="Ingrese la presión nocturna"
+     required></ion-input>
+    </ion-item> 
+    </ion-card>
+
+    <br>
+    <br>
+    <br>
+
+   <!--routerLink="/registro2" redireccionar a otra pagina-->
+
+   <div class="boton">
+    <ion-button color="secondary" shape="round" fill="outline" expand="full" type="submit">
+      <ion-icon name="save-sharp"></ion-icon>
+    </ion-button>
+   </div>
+  </ion-card>
+  <app-presion></app-presion>
 </ion-content>
